@@ -1,4 +1,5 @@
 __author__ = 'bromix'
+from six import PY2
 
 from ... import kodion
 from ...youtube.helper import utils
@@ -24,6 +25,8 @@ def my_subscriptions_to_items(provider, context, json_data, do_filter=False):
     for item in items:
         channel = item['channel'].lower()
         channel = channel.replace(',', '')
+        if PY2:
+            channel = channel.encode('utf-8', 'ignore')
         if not do_filter or (do_filter and (not black_list) and (channel in filter_list)) or \
                 (do_filter and black_list and (channel not in filter_list)):
             video_id = item['id']
