@@ -1,4 +1,5 @@
 __author__ = 'bromix'
+from six import PY2
 
 import re
 import time
@@ -73,6 +74,8 @@ def update_channel_infos(provider, context, channel_id_dict, subscription_id_dic
         if context.get_path() == '/subscriptions/list/':
             channel = title.lower()
             channel = channel.replace(',', '')
+            if PY2:
+                channel = channel.encode('utf-8', 'ignore')
             if channel in filter_list:
                 yt_context_menu.append_remove_my_subscriptions_filter(context_menu, provider, context, title)
             else:
